// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for a card with a footer 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  padding: 1.5rem !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-shadow: 0px 2px 4px 0px #e6e6e6,0px 0px 0px 1px #e6e6e6;
}

.c5 {
  font-weight: 700;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c5 + .sub-heading {
  margin-top: -1rem;
}

.c5:last-child {
  margin-bottom: 0;
}

h1.c5 {
  font-size: 3em;
}

h2.c5 {
  font-size: 2.5em;
}

h3.c5 {
  font-size: 2em;
}

h4.c5 {
  font-size: 1.5em;
}

h5.c5 {
  font-size: 1.25em;
}

h6.c5 {
  font-size: 1em;
}

.c5 .c7 {
  top: 0.1em;
}

.c5 {
  font-weight: 600;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 1em;
  position: relative;
  width: 100%;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 1rem;
  width: 100%;
}

.c4 {
  margin-bottom: 0px;
}

@media (max-width:480px) {
  h1.c5 {
    font-size: 2em;
  }
}

@media (max-width:480px) {
  h2.c5 {
    font-size: 1.8em;
  }
}

@media (max-width:480px) {
  h3.c5 {
    font-size: 1.6em;
  }
}

@media (max-width:480px) {
  h4.c5 {
    font-size: 1.4em;
  }
}

@media (max-width:480px) {
  h5.c5 {
    font-size: 1.2em;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3"
  >
    <h5
      class="c4 sub-heading c5 c3"
    >
      This is a title
    </h5>
  </div>
  <div
    class="c3"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse diam ipsum, cursus id placerat congue, ultrices eget lectus. Duis posuere, lacus sed tristique commodo, sapien turpis mollis nunc, vestibulum consectetur lectus augue sit amet justo.
  </div>
  <div
    class="c6 c3"
  >
    test
  </div>
</div>
`;

exports[`renders correctly for a compounded card with a actions 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  padding: 1.5rem !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-shadow: 0px 2px 4px 0px #e6e6e6,0px 0px 0px 1px #e6e6e6;
}

.c5 {
  font-weight: 700;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c5 + .sub-heading {
  margin-top: -1rem;
}

.c5:last-child {
  margin-bottom: 0;
}

h1.c5 {
  font-size: 3em;
}

h2.c5 {
  font-size: 2.5em;
}

h3.c5 {
  font-size: 2em;
}

h4.c5 {
  font-size: 1.5em;
}

h5.c5 {
  font-size: 1.25em;
}

h6.c5 {
  font-size: 1em;
}

.c5 .c6 {
  top: 0.1em;
}

.c5 {
  font-weight: 600;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 1em;
  position: relative;
  width: 100%;
}

.c4 {
  margin-bottom: 0px;
}

@media (max-width:480px) {
  h1.c5 {
    font-size: 2em;
  }
}

@media (max-width:480px) {
  h2.c5 {
    font-size: 1.8em;
  }
}

@media (max-width:480px) {
  h3.c5 {
    font-size: 1.6em;
  }
}

@media (max-width:480px) {
  h4.c5 {
    font-size: 1.4em;
  }
}

@media (max-width:480px) {
  h5.c5 {
    font-size: 1.2em;
  }
}

<div
  aria-describedby="Card-1"
  aria-labelledby="Card-2"
  class="c0 c1"
>
  <div
    class="c2 c3"
  >
    <h5
      class="c4 sub-heading c5 c3"
      id="Card-2"
    >
      This is a title
    </h5>
    <div>
      <div>
        test
      </div>
    </div>
  </div>
  <div
    class="c3"
    id="Card-1"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse diam ipsum, cursus id placerat congue, ultrices eget lectus. Duis posuere, lacus sed tristique commodo, sapien turpis mollis nunc, vestibulum consectetur lectus augue sit amet justo.
  </div>
</div>
`;

exports[`renders correctly for a default card 1`] = `
.c1 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
  padding: 1.5rem !important;
}

.c1:focus:not(:focus-visible) {
  outline: none;
}

.c3 {
  margin: unset;
  padding: unset;
  border: unset;
  background: unset;
  font: unset;
  font-family: inherit;
  font-size: 100%;
  box-sizing: border-box;
  background-color: unset;
  color: inherit;
}

.c3:focus:not(:focus-visible) {
  outline: none;
}

.c0 {
  background-color: white;
  border-radius: 3px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-shadow: 0px 2px 4px 0px #e6e6e6,0px 0px 0px 1px #e6e6e6;
}

.c5 {
  font-weight: 700;
  line-height: 1.2;
  margin-bottom: 1rem;
}

.heading.c5 + .sub-heading {
  margin-top: -1rem;
}

.c5:last-child {
  margin-bottom: 0;
}

h1.c5 {
  font-size: 3em;
}

h2.c5 {
  font-size: 2.5em;
}

h3.c5 {
  font-size: 2em;
}

h4.c5 {
  font-size: 1.5em;
}

h5.c5 {
  font-size: 1.25em;
}

h6.c5 {
  font-size: 1em;
}

.c5 .c6 {
  top: 0.1em;
}

.c5 {
  font-weight: 600;
}

.c2 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  padding-bottom: 1em;
  position: relative;
  width: 100%;
}

.c4 {
  margin-bottom: 0px;
}

@media (max-width:480px) {
  h1.c5 {
    font-size: 2em;
  }
}

@media (max-width:480px) {
  h2.c5 {
    font-size: 1.8em;
  }
}

@media (max-width:480px) {
  h3.c5 {
    font-size: 1.6em;
  }
}

@media (max-width:480px) {
  h4.c5 {
    font-size: 1.4em;
  }
}

@media (max-width:480px) {
  h5.c5 {
    font-size: 1.2em;
  }
}

<div
  class="c0 c1"
>
  <div
    class="c2 c3"
  >
    <h5
      class="c4 sub-heading c5 c3"
    >
      This is a title
    </h5>
  </div>
  <div
    class="c3"
  >
    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse diam ipsum, cursus id placerat congue, ultrices eget lectus. Duis posuere, lacus sed tristique commodo, sapien turpis mollis nunc, vestibulum consectetur lectus augue sit amet justo.
  </div>
</div>
`;
